calico_versioned_docs/version-3.32/reference/resources/ipamconfig.mdx
---
description: Reference for the IP address management configuration resource in Calico Open Source that sets cluster-wide options such as strict affinity.
---

# IPAM configuration

An IPAM configuration resource (`IPAMConfiguration`) represents global IPAM configuration options.

## Sample YAML

```yaml
apiVersion: projectcalico.org/v3
kind: IPAMConfiguration
metadata:
  name: default
spec:
  strictAffinity: false
  maxBlocksPerHost: 4
  kubeVirtVMAddressPersistence: Enabled
```

## IPAM configuration definition

### Metadata

| Field | Description                                               | Accepted Values | Schema |
| ----- | --------------------------------------------------------- | --------------- | ------ |
| `name`  | Unique name to describe this resource instance. Required. | default         | string |

The resource is a singleton which must have the name `default`.

### Spec

| Field                        | Description                                                                                                                          | Accepted Values    | Schema | Default  |
| ---------------------------- | ------------------------------------------------------------------------------------------------------------------------------------ | ------------------ | ------ | -------- |
| `strictAffinity`               | When StrictAffinity is true, borrowing IP addresses is not allowed.                                                                  | true, false        | bool   | false    |
| `maxBlocksPerHost`             | The max number of blocks that can be affine to each host.                                                                            | 0 - max(int32)     | int    | 20       |
| `kubeVirtVMAddressPersistence` | Controls whether KubeVirt VMs retain persistent IP addresses across lifecycle events such as restart or migration. Requires KubeVirt. | Enabled, Disabled  | string | Enabled  |